<resources>
    <string name="app_name">studymate</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
</resources>